fixed navbar overlapping page content

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     background: #0d0d0d;
     color: white;
     overflow-x: hidden;
+    padding-top: 70px;
 }
 
 /* NAVBAR */
@@ -19,6 +20,7 @@ body {
     padding: 15px 40px;
     background: black;
     position: fixed;
+    top: 0;
     width: 100%;
 }
 
